tests/snapshots/lib__snapshots__simple_filter@levels.env_filter.snap
---
source: tests/snapshots.rs
expression: "off,error,warn,info,debug,trace"
---
Filter {
    directives: ReverseSortedVec {
        vec: [
            Directive {
                target: None,
                level: LevelFilter::ERROR,
            },
            Directive {
                target: None,
                level: LevelFilter::INFO,
            },
            Directive {
                target: None,
                level: LevelFilter::TRACE,
            },
            Directive {
                target: None,
                level: LevelFilter::DEBUG,
            },
            Directive {
                target: None,
                level: LevelFilter::WARN,
            },
            Directive {
                target: None,
                level: LevelFilter::OFF,
            },
        ],
    },
    regex: None,
}
