tests/snapshots/lib__snapshots__simple_filter@pain.env_filter.snap
---
source: tests/snapshots.rs
expression: "target1[span1],[span2]target2,[span3][span4],[[[[[[span5],[{field1!!!!!!!!!field2=val}]"
---
Filter {
    directives: ReverseSortedVec {
        vec: [
            Directive {
                target: Some(
                    "[span2]target2",
                ),
                level: LevelFilter::TRACE,
            },
            Directive {
                target: Some(
                    "[span3][span4]",
                ),
                level: LevelFilter::TRACE,
            },
            Directive {
                target: Some(
                    "target1[span1]",
                ),
                level: LevelFilter::TRACE,
            },
            Directive {
                target: Some(
                    "[[[[[[span5]",
                ),
                level: LevelFilter::TRACE,
            },
        ],
    },
    regex: None,
}
