tests/snapshots/lib__snapshots__simple_filter@parse_spec_blank_level_isolated.env_filter.snap
---
source: tests/snapshots.rs
assertion_line: 68
expression: "     "
---
Filter {
    directives: SortedVec {
        vec: [],
    },
    regex: None,
}
