tests/snapshots/lib__snapshots__simple_filter@parse_spec_blank_level_isolated_blank_comma.env_filter.snap
---
source: tests/snapshots.rs
expression: "     ,"
---
Filter {
    directives: ReverseSortedVec {
        vec: [],
    },
    regex: None,
}
