tests/snapshots/lib__snapshots__simple_filter@parse_spec_empty_level.env_filter.snap
---
source: tests/snapshots.rs
assertion_line: 68
expression: "crate1::mod1=wrong,crate2="
---
Filter {
    directives: SortedVec {
        vec: [
            Directive {
                target: Some(
                    "crate2",
                ),
                level: LevelFilter::TRACE,
            },
        ],
    },
    regex: None,
}
