tests/snapshots/lib__snapshots__simple_filter@parse_spec_empty_with_filter.env_filter.snap
---
source: tests/snapshots.rs
expression: crate1/a*c
---
Filter {
    directives: ReverseSortedVec {
        vec: [
            Directive {
                target: Some(
                    "crate1",
                ),
                level: LevelFilter::TRACE,
            },
        ],
    },
    regex: Some(
        a*c,
    ),
}
