tests/snapshots/lib__snapshots__simple_filter@parse_spec_global.env_filter.snap
---
source: tests/snapshots.rs
assertion_line: 68
expression: "warn,crate2=debug"
---
Filter {
    directives: SortedVec {
        vec: [
            Directive {
                target: None,
                level: LevelFilter::WARN,
            },
            Directive {
                target: Some(
                    "crate2",
                ),
                level: LevelFilter::DEBUG,
            },
        ],
    },
    regex: None,
}
