tests/snapshots/lib__snapshots__simple_filter@parse_spec_global_bare_warn_lc.env_filter.snap
---
source: tests/snapshots.rs
expression: warn
---
Filter {
    directives: ReverseSortedVec {
        vec: [
            Directive {
                target: None,
                level: LevelFilter::WARN,
            },
        ],
    },
    regex: None,
}
