tests/snapshots/lib__snapshots__simple_filter@parse_spec_global_bare_warn_mixed.env_filter.snap
---
source: tests/snapshots.rs
assertion_line: 68
expression: wArN
---
Filter {
    directives: SortedVec {
        vec: [
            Directive {
                target: None,
                level: LevelFilter::WARN,
            },
        ],
    },
    regex: None,
}
