tests/snapshots/lib__snapshots__simple_filter@parse_spec_global_bare_warn_uc.env_filter.snap
---
source: tests/snapshots.rs
expression: WARN
---
Filter {
    directives: ReverseSortedVec {
        vec: [
            Directive {
                target: None,
                level: LevelFilter::WARN,
            },
        ],
    },
    regex: None,
}
