tests/snapshots/lib__snapshots__simple_filter@parse_spec_invalid_crate.env_filter.snap
---
source: tests/snapshots.rs
assertion_line: 68
expression: "crate1::mod1=warn=info,crate2=debug"
---
Filter {
    directives: SortedVec {
        vec: [
            Directive {
                target: Some(
                    "crate2",
                ),
                level: LevelFilter::DEBUG,
            },
        ],
    },
    regex: None,
}
